examples/test/testpolicy13380.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13380
  namespace: namespace401
spec:
  podSelector:
    matchLabels:
      key18: value14
      key46: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value25
          key8: value40
          key49: value20
      podSelector:
        matchLabels:
          key34: value3
